fixed spacing at bottom of page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,6 +50,7 @@
   flex-direction: column;
   align-items: center;
   z-index: 1;
+  margin-bottom: 20px;
 }
 
 .contents {
